fix for buttons remaining highlighted on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,10 +123,6 @@ ul {
     margin-bottom: 20px;
     padding: 15px 32px;
 }
-.answer:hover{
-    border : 3px solid #D7E8F1;
-    font-weight: bold;
-}
 #quiz {
     display: block;
     align-items: center;
@@ -150,7 +146,9 @@ footer {
     list-style-type: none;
 }
 
-/* media queries for smaller screens */
+/* media queries */
+
+/* for smaller screens */
 
 @media screen and (max-width: 600px) {
     #art {
@@ -174,5 +172,12 @@ footer {
     .answer {
         font-size: 0.7em;
         width: 100px;
-    } 
+    }    
 }
+
+@media screen and (min-width: 992px) { 
+    .answer:hover{
+        border : 3px solid #D7E8F1;
+        font-weight: bold;
+    }
+}    
